[package]
name = "mkulid"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
description = "A command-line ULID generator — like uuidgen, but for ULIDs"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
homepage = "https://westhoffswelt.de"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
ulid = "1.2.1"
